--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
+async-timeout==5.0.1
 asyncpg==0.30.0
 blinker==1.9.0
+boto3==1.36.18
+botocore==1.36.18
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
@@ -21,26 +24,38 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+jmespath==1.0.1
+loguru==0.7.3
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.2.2
+pandas==2.2.3
 passlib==1.7.4
+pillow==11.1.0
 psycopg2==2.9.10
 pyasn1==0.6.1
 pydantic==2.10.4
 pydantic-settings==2.7.0
 pydantic_core==2.27.2
 Pygments==2.18.0
+pyotp==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.20
+pytz==2024.2
 PyYAML==6.0.2
+qrcode==8.0
+redis==5.2.1
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
 rsa==4.9
+s3transfer==0.11.2
 secure-smtplib==0.1.1
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -49,6 +64,7 @@ SQLAlchemy==2.0.36
 starlette==0.41.3
 typer==0.15.1
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
