--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ blinker==1.9.0
 boto3==1.36.18
 botocore==1.36.18
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.1
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -36,6 +38,7 @@ passlib==1.7.4
 pillow==11.1.0
 psycopg2==2.9.10
 pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.10.4
 pydantic-settings==2.7.0
 pydantic_core==2.27.2
